--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
     <head>
         <meta charset="UFT-8">
         <link rel="stylesheet" href="style.css">
+        <script src="app.js" defer></script>
         <title>Rock-paper-scissors</title>
     </head>
 
     <body>
+        
         <h1>Rock-paper-scissors game</h1>
-        <script src="app.js"></script>
+
+        <div class="container1">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        
     </body>
 </html>
