Add an option to start a new game at the end of the round

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div id="info">Make your choice!</div>
 
         <div class="container1">
-            <button id="rock">Rock</button>
-            <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button>
+            <button id="rock" class="touch">Rock</button>
+            <button id="paper" class="touch">Paper</button>
+            <button id="scissors" class="touch">Scissors</button>
         </div>
     
         <div class="container2">
